sqlite3 to pg. adding posts_new route

--- a/app/assets/stylesheets/project.css.scss
+++ b/app/assets/stylesheets/project.css.scss
@@ -6,17 +6,16 @@
   margin-top: 50px;
 }
 
-.projects p, .projects h2 {
-  font-family: "Pontano Sans";
-}
-
 .projects p {
   font-size: 1.2em;
   padding: 0;
+  font-family: "Pontano Sans";
 }
 
 .projects h2 {
   color: #453b35;
+  font-family: "Annie Use Your Telescope";
+  font-size: 1.5em;
 }
 
 .projects section {
