--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,6 +9,6 @@
   </section>
   <section>
     <h2>Foobar Show </h2>
-    <p>Getting back to my journalistic roots by researching and interviewing people doing interesting work tech, and putting together a show slash tech talk telling their stories. </p>
+    <p>Getting back to my journalistic roots by researching and interviewing people doing interesting work tech, and putting together a pseudo-tech talk telling their stories. </p>
   </section>
 </div>
