--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,2 @@
 <h2> Hey Grown Woman. Whatchawannado?</h2>
-<%= link_to "New Illustration", new_illustration_path %>
-<%= link_to "New Blog Post", new_blogpost_path %>
+<%= link_to "Post", new_post_path %>
