migrated new blog form

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -20,7 +20,11 @@ form {
 }
 
 textarea {
-  height: 200px;
+  height: 100px;
   width: 100%;
+}
 
+textarea.post_body {
+  height: 500px;
+  width: 100%;
 }
