form border styling

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -13,6 +13,7 @@ input, textarea {
 
 input:active, input:focus, textarea:active, textarea:focus {
   outline: none;
+  border: 1px solid #f95902;
 }
 
 form {
