--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <li>Code</li>
           <li>Illustrations</li>
           <li>Thoughts</li>
-          <a href="/all"><li>All</li></a>
+          <a href="/posts"><li>All</li></a>
         </ul>
       </nav>
   <%= yield %>
