--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,40 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.post {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 30px;
+}
+
+.post:last-child {
+  border-bottom: none;
+}
+
+.posts p, .posts a {
+  font-family: "Pontano Sans", sans-serif;
+  padding: 0;
+  margin-bottom: 15px;
+}
+
+.posts h2 {
+  color: #453b35;
+  font-size: 2em;
+}
+
+.posts p {
+  font-size: 1.3em;
+}
+
+.posts a {
+  float: right;
+color: #f95902;
+  padding: 2px 10px;
+}
+
+.posts a:hover {
+  float: right;
+  background: #f95902;
+  color: white;
+  padding: 2px 10px;
+}
