--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,11 @@
 <div class="posts">
 
   <% @posts.each do |post| %>
-    <div class="title"><%= post.title %></div>
-    <div class="post"><%= post.preview %></div>
+  <div class="post">
+    <h2><%= post.title %></h2>
+    <p><%= post.preview %></p>
+    <%= link_to "continue", post %>
+  </div>
   <% end %>
 
 </div>
