--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,11 @@
+<% markdown = Redcarpet::Markdown.new(Redcarpet::Render::HTML, :autolink => true, :space_after_headers => true) %>
+
 <div class="posts">
 
   <% @posts.each do |post| %>
   <div class="post">
     <h2><%= post.title %></h2>
-    <p><%= post.preview %></p>
+    <p><%= raw markdown.render(post.preview) unless post.preview.nil? %></p>
     <%= link_to "continue", post %>
   </div>
   <% end %>
