--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
+<% markdown = Redcarpet::Markdown.new(Redcarpet::Render::HTML, :autolink => true, :space_after_headers => true) %>
+
 <div class="posts">
   <h2><%= @post.title %></h2>
-  <p><%= @post.body %></p>
+  <p><%= raw markdown.render(@post.body) unless @post.body.nil? %></p>
 </div>
