--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -32,6 +32,14 @@ color: #f95902;
   padding: 2px 10px;
 }
 
+.posts code {
+  padding: 10px 30px;
+  border: 1px solid #eee;
+  margin-left: 30px;
+  background: #eee;
+  color: #453b35;
+}
+
 .posts a:hover {
   float: right;
   background: #f95902;
