destroy and edit posts done

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,5 +4,6 @@
   <h2><%= @post.title %></h2>
   <p><%= raw markdown.render(@post.body) unless @post.body.nil? %></p>
   </br>
+  <%= link_to "Edit", edit_post_path(@post) %>
   <%= link_to "Delete", post_path(@post), :method => :delete, data: {confirm: "You sure?" } %>
 </div>
