made post_types, tied to posts and on new form

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,8 @@
 <%= form_for(@post) do |f| %>
-  <%= f.text_field :title, :placeholder => "title" %> <br>
+  <%= f.text_field :title, :placeholder => "title" %> <% @post_types.each do |post_type| %>
+    <input id="post[post_type]" name="post[post_type_id]" type="checkbox" value=<%= post_type.id %>></input>
+    <%= post_type.name %>
+  <% end %></br></br> <br>
   <%= f.text_area :preview, :placeholder => "preview" %></br>
   <%= f.text_area :body, :class => "post_body", :placeholder => "body" %></br>
   <%= f.submit %>
