build out '/posts/illustration' and '/posts/thoughts'

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
         <ul>
           <a href="/projects"><li>Projects</li></a>
           <a href="/posts/code"><li>Code</li></a>
-          <li>Illustrations</li>
-          <li>Thoughts</li>
+          <a href="/posts/illustrations"><li>Illustrations</li></a>
+          <a href="/posts/thoughts"><li>Thoughts</li></a>
           <a href="/posts"><li>All</li></a>
         </ul>
       </nav>
