added about and included 'dear-flatiron' cartoon

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -7,7 +7,8 @@ input[type="submit"] {
 
 input, textarea {
   padding: 10px 20px;
-  border: 1px solid #ccc;
+  border: none;
+  border-bottom: 1px solid #ccc;
   margin-bottom: 10px;
   font-size: 1.3em;
   font-family: "Pontano Sans", "sans-serif";
@@ -15,7 +16,7 @@ input, textarea {
 
 input:active, input:focus, textarea:active, textarea:focus {
   outline: none;
-  border: 1px solid #f95902;
+  border-bottom: 1px solid #f95902;
 }
 
 form {
