--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
         <ul>
           <a href="http://twitter.com/saronyitbarek" target="_blank"><li>Twitter</li></a>
           <a href="http://github.com/sarony" target="_blank"><li>Github</li></a>
+          <a href="/about" target="_blank"><li>About</li></a>
         </ul>
       </footer>
     </div>
