--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -18,6 +18,12 @@ a:hover {
   margin: auto;
 }
 
+.dear-flatiron {
+  margin: 0 auto;
+  text-align: center;
+  width: 99%;
+}
+
 nav {
   width: 100%;
   height: 50px;
