--- a/app/views/posts/code.html.erb
+++ b/app/views/posts/code.html.erb
@@ -1,3 +1,5 @@
+<% markdown = Redcarpet::Markdown.new(Redcarpet::Render::HTML, :autolink => true, :space_after_headers => true) %>
+
 <% @posts.each do |post| %>
   <div class="post">
     <h2><%= post.title %></h2>
